[WWW] Styling tweak to terminal to ensure no text overflows

--- a/src/www/src/style/components/terminal.scss
+++ b/src/www/src/style/components/terminal.scss
@@ -14,6 +14,7 @@
   max-height: 60vh;
   overflow-y: scroll;
   white-space: pre-wrap;
+  line-break: anywhere;
 
   /* @NOTE hide scrollbars */
   scrollbar-width: none; /* Firefox */
